// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputCounter should render 1`] = `
<DocumentFragment>
  <div
    class="fixed invisible w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
  >
    <div
      class="flex relative flex-1 h-full"
    >
      <input
        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
        data-testid="InputCounter__input"
        maxlength="10"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
    >
      <div
        class=""
      >
        <span
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          data-testid="InputCounter__counter"
        >
          0/10
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputCounter should render with invalid state 1`] = `
<div>
  <div
    class="fixed invisible w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
  >
    <div
      class="flex relative flex-1 h-full"
    >
      <input
        aria-invalid="true"
        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
        data-testid="InputCounter__input"
        maxlength="10"
        name="vendorField"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
    >
      <span
        data-testid="Input__error"
      >
        <div
          class="sc-bdfBwQ iyevwF text-theme-danger-500"
          height="20"
          width="20"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </span>
      <div
        class="pl-3"
      >
        <span
          class="text-sm font-semibold"
          data-testid="InputCounter__counter"
        >
          0
          /
          10
        </span>
      </div>
    </div>
  </div>
</div>
`;
